--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
     <div id="content"></div>
   </div>
   <script src="./js/seed.js"></script>
+  <script type="text/babel" data-plugins="transform-class-properties" src="./js/components/product.js"></script>
+  <script type="text/babel" data-plugins="transform-class-properties" src="./js/components/product_list.js"></script>
   <script type="text/babel" data-plugins="transform-class-properties" src="./js/app.js"></script>
 
 </body>
